	xmlchild() types.

	* src/core/exmpp_xml.erl: Complete addition of contracts. Fix
	documentation. Rename xmlelement_to_xmlel_and_ns_tables/3 to
	xmlelement_to_xmlel_and_nss_tables/3.
	(append_cdata/2): Change API: this function now works on an XML
	element, not on the children. For the previous behaviour, use the new
	append_cdata_to_list/2 function.

2009-02-24  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/exmpp_xml.hrl, include/exmpp_xmpp.hrl,
	include/internal/exmpp_xmpp.hrl: Add type declarations to records.
	This is used by dialyzer.

	* src/core/exmpp_utils.erl (any_to_list/1, any_to_binary/1): Add new
	functions to convert a string/binary/integer/atom to list and binary
	respectively.

	* src/core/exmpp_xml.erl: Rename some types in documentation:
	  o  xmlelement() -> xmlel_old()
	  o  xmlnsattribute() -> xmlattr()
	  o  xmlattribute() -> xmlattr_old()
	(set_attr_value/2, cdata/1): Use the new any_to_*/1 functions from
	exmpp_utils.

	* src/core/exmpp_stanza.erl: Add contracts. Fix documentation. Style.
	(set_id/2, set_id_in_attrs/2): Change API: an empty ID or undefined
	will remove the attribute. To have a random ID, specify 'random'.
	(set_lang_in_attrs/2): Change API: an empty lang or undefined will
	remove the attribute.
	(error/3): Fix a bug where the 'Text' attribute was never used.

	* src/core/exmpp_jid.erl: Add contracts. Fix documentation. Style.

	* src/core/exmpp_iq.erl, src/core/exmpp_dialback.erl,
	src/core/exmpp_xmlstream.erl: Fix documentation.

	* src/network/exmpp_session.erl: Fix a misuse of gen_fsm's message's
	From. This was not tested, though. Spotted by dialyzer.

2009-02-23  Pablo Polvorin  <pablo.polvorin@process-one.net>

	* README: State R12B as minimum version.

	* src/core/exmpp_stanza.erl: Use exmpp_jid:jid_to_binary/1.

2009-02-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Erlang R12B is now the minimum version to build and use Exmpp.
